# src/backend/swagger_server/controllers/favoriten_controller.py
@@ -3,15 +3,17 @@ import six
 
 from swagger_server.models.favoriten_body import FavoritenBody  # noqa: E501
 from swagger_server import util
+from flask import jsonify
+from swagger_server.__main__ import supabase  # Supabase-Client importieren
 
 
-def favoriten_delete(benutzername, event_id):  # noqa: E501
+def favoriten_delete(uid, event_id):  # noqa: E501
     """Event aus den Favoriten entfernen
 
      # noqa: E501
 
-    :param benutzername: Der Benutzer, dessen Favoriten bearbeitet werden
-    :type benutzername: str
+    :param uid: Die ID des Benutzers, dessen Favoriten bearbeitet werden
+    :type uid: int
     :param event_id: Die ID des Events, das entfernt werden soll
     :type event_id: int
 
@@ -20,17 +22,24 @@ def favoriten_delete(benutzername, event_id):  # noqa: E501
     return 'do some magic!'
 
 
-def favoriten_get(benutzername):  # noqa: E501
+def favoriten_get(uid):  # noqa: E501
     """Favoriten eines Benutzers abrufen
 
      # noqa: E501
 
-    :param benutzername: Der Benutzer, dessen Favoriten abgerufen werden
-    :type benutzername: str
+    :param uid: Die ID des Benutzers, dessen Favoriten abgerufen werden
+    :type uid: int
 
     :rtype: None
     """
-    return 'do some magic!'
+    EventIDs = supabase.table("Favourites").select("eid").eq("uid", uid).execute()
+    if not EventIDs.data:
+        return {"message": "Keine Favoriten gefunden"}, 404
+    event_ids = [event["eid"] for event in EventIDs.data]
+    events = supabase.table("Events").select("*").in_("eid", event_ids).execute()
+    if not events.data:
+        return {"message": "Keine Events gefunden"}, 404
+    return jsonify(events.data), 200
 
 
 def favoriten_post(body):  # noqa: E501
